# tinyagent-rust

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  tmp-secret.env
documentation/: agent-module-architecture.md  agent_explained.md  building_agents_and_tools.md  schema_response.md  structured-response-loop.md  structured-response-refactor.md  tool-macro-guide.md  vacation_planner_agent.md  vacation_planner_demo.md
documentation/development/: agent_practices.md
documentation/technical/: TOOL_SCHEMA_FIX.md
examples/: basic_agent.rs  complete_agent.rs  final_demo.rs  jina_reader_demo.rs  macro_tool_example.rs  real_agent.rs  simple_agent.rs  smolagents_demo.rs  test_openrouter.rs  vacation_planner.rs
githooks/: pre-commit
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/core/: agent.rs  conversation.rs  memory.rs  mod.rs  steps.rs  tool_call.rs
src/debug/: agent.rs  mod.rs  tools.rs
src/schemas/: mod.rs  schema.rs  validation.rs  validator.rs
src/services/: execution.rs  mod.rs  openai_client.rs  planning.rs  response_handler.rs  tool_call_utils.rs
src/tools/: calculator.rs  function_factory.rs  jina.rs  mod.rs  tool.rs  weather.rs
src/types/: mod.rs  response.rs  result.rs  vacation_types.rs
tests/: integration_tests.rs  macro_test.rs  schema_validation_test.rs
tinyagent-macros/: Cargo.toml
tinyagent-macros/src/: schema_extraction.rs
tinyagent_macros/: Cargo.toml
tinyagent_macros/src/: completion_schema.rs  lib.rs
