[package]
name = "tinyagent-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for tiny-agent-rs tool development"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
schemars = "0.8"
serde_json = "1.0"
